# monkey-interpreter-python

./: README.md  main.py  mypy.ini  pyproject.toml
.circleci/: config.yml
monkey/: ast.py  lexer.py  parser.py  token.py
test/: test_lexer.py  test_parser.py
